添加图片放大镜效果

--- a/lagou/style.css
+++ b/lagou/style.css
@@ -1,7 +1,8 @@
 .list {
+    width: 800px;
+    margin: 0 auto;
     list-style: none;
     padding-left: 0;
-    margin-left: -10px;
 }
 .list li {
     float: left;
