--- a/style.css
+++ b/style.css
@@ -3,8 +3,25 @@ body {
 }
 a:link {
     text-decoration: none;
+    position: relative;
 }
-
+a:after {
+    content: '';
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: -2px;
+    border-bottom: 2px solid #03a9f4;
+    transform: scaleX(0);    
+    transition: transform 0.3s ease-in-out;    
+}
+a:hover:after {
+    transform: scaleX(1);
+}
+.list {
+    width: 500px;
+    margin: 0 auto;
+}
 .list .a {
     color: #333;
 }
